# docs/swagger.yaml
@@ -26,6 +26,81 @@ paths:
       summary: Retrieves basic API information
       tags:
       - Misc
+  /events-summary/data:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - default: 367,333
+        description: Comma separated list of Asset IDs
+        in: query
+        name: assets
+        required: true
+        type: string
+      - default: 1708300800:1708387200
+        description: Timestamp range in format {startTs}:{endTs}. Timestamps in seconds,
+          tz=UTC
+        in: query
+        name: ts
+        type: string
+      - default: 144h
+        description: Span description string
+        in: query
+        name: span
+        type: string
+      - description: Comma separated list of event categories
+        example: MACHINE,DATA
+        in: query
+        name: category
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              additionalProperties: true
+              type: object
+            type: array
+      summary: Retrieves script data for asset context
+      tags:
+      - Data
+  /online-summary/data:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - default: 367,333
+        description: Comma separated list of Asset IDs
+        in: query
+        name: assets
+        required: true
+        type: string
+      - default: 1708300800:1708387200
+        description: Timestamp range in format {startTs}:{endTs}. Timestamps in seconds,
+          tz=UTC
+        in: query
+        name: ts
+        type: string
+      - default: 144h
+        description: Span description string
+        in: query
+        name: span
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              additionalProperties: true
+              type: object
+            type: array
+      summary: Retrieves online-summary script data for asset context
+      tags:
+      - Data
   /ping:
     get:
       consumes:
