# handlers/events-summary.go
@@ -1,9 +1,7 @@
 package handlers
 
 import (
-	"fmt"
 	"scripts-api/controllers"
-	"time"
 
 	"github.com/gin-gonic/gin"
 )
@@ -14,28 +12,18 @@ import (
 //
 //	@Summary	Retrieves script data for asset context
 //
+//	@Param			assets			query	string	true	"Comma separated list of Asset IDs"												default(367,333)
 //	@Param			ts				query	string	false	"Timestamp range in format {startTs}:{endTs}. Timestamps in seconds, tz=UTC"	default(1708300800:1708387200)
-//	@Param			organization	query	int		false	"Organization Integer Identifier"												default(213)
-//	@Param			assets			query	string	false	"Comma separated list of Asset IDs"												default(367,333)
-//	@Param			category		query	string	false	"(available in events-summary) Comma separated list of event categories"		example(MACHINE,DATA)
+//	@Param			span				query	string	false	"Span description string"	default(144h)
+//	@Param			category		query	string	false	"Comma separated list of event categories"		example(MACHINE,DATA)
 //
 //	@Tags			Data
 //	@Accept			json
 //	@Produce		json
+//	@Accept			csv
+//	@Produce		csv
 //	@Success		200	{object}	[]map[string]any
 //	@Router			/events-summary/data [get]
 func EventsSummary(c *controllers.ScriptDataController) gin.HandlerFunc {
-	return func(ctx *gin.Context) {
-
-		if ctx.Query("ts") == "" {
-			end := time.Now()
-			delay := time.Duration(8 * 24 * time.Hour)
-			start := end.Add(-delay)
-			ctx.AddParam("ts", fmt.Sprintf("%d:%d", start.Unix(), end.Unix()))
-		}
-
-		ctx.AddParam("scriptName", "events-summary")
-		h := c.GetData()
-		h(ctx)
-	}
+	return func(ctx *gin.Context) {}
 }
